[package]
name = "rist-transport"
version = "0.3.0"
edition = "2024"
description = "Async RIST transport layer built on tokio"
license = "MPL-2.0"

[dependencies]
rist-protocol = { path = "../rist-protocol" }
tokio = { version = "1.51", features = ["net", "rt-multi-thread", "time", "sync", "macros"] }
socket2 = "0.6"
bytes = "1.11"
log = "0.4"
thiserror = "2.0"
anyhow = "1.0"
tokio-util = "0.7"
rand = "0.9"

[dev-dependencies]
env_logger = "0.11"
anyhow = "1.0"
